--- a/WEB PAGE/speech10.html
+++ b/WEB PAGE/speech10.html
@@ -78,7 +78,7 @@
     <body onload="startCountdown(10)"> <!-- 10秒のカウントダウン -->
         <div class="text-center gy-3">
             <h1>ページが<span id="countdown">10</span>秒後に遷移します。</h1>
-            <button onclick="skipCountdown()">スキップ</button> <!-- スキップボタン -->
+            <button type="button" class="btn btn-primary" onclick="skipCountdown()">スキップ</button> <!-- スキップボタン -->
         </div>
     </body>
     
