--- a/WEB PAGE/speech.html
+++ b/WEB PAGE/speech.html
@@ -25,65 +25,64 @@
         </div>
     </div>
 
-
-    <script>
-        // 現在のプレイヤー番号を取得または初期化
-        const currentPlayer = sessionStorage.getItem("currentPlayer")
-            ? parseInt(sessionStorage.getItem("currentPlayer"))
-            : 1;
-
-        // 次のプレイヤー番号を設定
-        function nextPlayer() {
-            let currentPlayer = sessionStorage.getItem("currentPlayer")
-                ? parseInt(sessionStorage.getItem("currentPlayer"))
-                : 1;
-
-            const nextPlayer = currentPlayer + 1;
-
-            if (nextPlayer > 8) {
-                // すべてのプレイヤーのスピーチが終わったら投票画面に遷移
-                sessionStorage.removeItem("currentPlayer"); // プレイヤー番号をリセット
-                location.href = "./confirmation.html?nx=vote"; // 投票画面に遷移
-                return;
-            }
-
-            // 次のプレイヤー番号をセッションストレージに保存
-            sessionStorage.setItem("currentPlayer", nextPlayer);
-
-            // 本人確認ページに戻る
-            location.href = "./confirmation.html?nx=speech";
-        }
-
-        // カウントダウン処理
-        let countdownInterval; // カウントダウンのインターバルを管理する変数
-
-        function startCountdown(seconds) {
-            let counter = seconds;
-            countdownInterval = setInterval(() => {
-                document.getElementById('countdown').textContent = counter;
-                counter--;
-                if (counter < 0) {
-                    clearInterval(countdownInterval);
-                    nextPlayer(); // 次のプレイヤーに進む
-                }
-            }, 1000);
-        }
-
-        // スキップボタンを押した時の動作
-        function skipCountdown() {
-            clearInterval(countdownInterval); // カウントダウンを停止
-            nextPlayer(); // 次のプレイヤーに進む
-        }
-    </script>
-
     <div class="text-center">
 
         <body onload="startCountdown(30)"> <!-- 30秒のカウントダウン -->
             <div>
                 <h1>ページが<span id="countdown">30</span>秒後に遷移します。</h1>
-                <button onclick="skipCountdown()">スキップ</button> <!-- スキップボタン -->
+                <button type="button" class="btn btn-primary" onclick="skipCountdown()">スキップ</button> <!-- スキップボタン -->
             </div>
         </body>
     </div>
 
 </body>
+
+<script>
+    // 現在のプレイヤー番号を取得または初期化
+    const currentPlayer = sessionStorage.getItem("currentPlayer")
+        ? parseInt(sessionStorage.getItem("currentPlayer"))
+        : 1;
+
+    // 次のプレイヤー番号を設定
+    function nextPlayer() {
+        let currentPlayer = sessionStorage.getItem("currentPlayer")
+            ? parseInt(sessionStorage.getItem("currentPlayer"))
+            : 1;
+
+        const nextPlayer = currentPlayer + 1;
+
+        if (nextPlayer > 8) {
+            // すべてのプレイヤーのスピーチが終わったら投票画面に遷移
+            sessionStorage.removeItem("currentPlayer"); // プレイヤー番号をリセット
+            location.href = "./confirmation.html?nx=vote"; // 投票画面に遷移
+            return;
+        }
+
+        // 次のプレイヤー番号をセッションストレージに保存
+        sessionStorage.setItem("currentPlayer", nextPlayer);
+
+        // 本人確認ページに戻る
+        location.href = "./confirmation.html?nx=speech";
+    }
+
+    // カウントダウン処理
+    let countdownInterval; // カウントダウンのインターバルを管理する変数
+
+    function startCountdown(seconds) {
+        let counter = seconds;
+        countdownInterval = setInterval(() => {
+            document.getElementById('countdown').textContent = counter;
+            counter--;
+            if (counter < 0) {
+                clearInterval(countdownInterval);
+                nextPlayer(); // 次のプレイヤーに進む
+            }
+        }, 1000);
+    }
+
+    // スキップボタンを押した時の動作
+    function skipCountdown() {
+        clearInterval(countdownInterval); // カウントダウンを停止
+        nextPlayer(); // 次のプレイヤーに進む
+    }
+</script>
